[gd_scene load_steps=20 format=3 uid="uid://fkls0lwl8skh"]

[ext_resource type="Script" path="res://niveles/Cabras.gd" id="1_fj5la"]
[ext_resource type="Texture2D" uid="uid://7jyf7jvwejkf" path="res://img/fondo nivel/cabra_test.jpg" id="2_8vgjk"]
[ext_resource type="PackedScene" uid="uid://dtvdw0gup54f3" path="res://sonido/backtrack.tscn" id="2_xskei"]
[ext_resource type="AudioStream" uid="uid://d1lwg531jk7b2" path="res://sonido/BGM/Goat_Scenario_1_Intro.ogg" id="3_hh8yh"]
[ext_resource type="AudioStream" uid="uid://n7u6mpjbmk1j" path="res://sonido/BGM/Goat_Scenario_1_Loop.ogg" id="4_nof0g"]
[ext_resource type="Script" path="res://clases/entidad.gd" id="5_glogr"]
[ext_resource type="AudioStream" uid="uid://vicfopomtwir" path="res://sonido/BGM/Goat_Scenario_2_Intro.ogg" id="5_unuhb"]
[ext_resource type="Script" path="res://clases/elemento.gd" id="6_h4pds"]
[ext_resource type="AudioStream" uid="uid://cadd28ync0tin" path="res://sonido/BGM/Goat_Scenario_2_Loop.ogg" id="6_i4s8h"]
[ext_resource type="Texture2D" uid="uid://4l322vhi144e" path="res://placeholder.png" id="7_kb5do"]
[ext_resource type="PackedScene" uid="uid://ddyggc31ot8gm" path="res://entidades/juez.tscn" id="9_pkqgs"]
[ext_resource type="PackedScene" uid="uid://0ll2b1d42sji" path="res://entidades/cabra.tscn" id="9_xqvxt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7tso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dl3bc"]
size = Vector2(74, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8slc"]
size = Vector2(58, 96)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fcvis"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dn1qr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e6iya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpgmf"]
size = Vector2(100, 21)

[node name="Cabra" type="Node2D" groups=["Persist", "scenary"]]
script = ExtResource("1_fj5la")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="before" parent="." instance=ExtResource("2_xskei")]
intro = ExtResource("3_hh8yh")
loop = ExtResource("4_nof0g")

[node name="after" parent="." instance=ExtResource("2_xskei")]
intro = ExtResource("5_unuhb")
loop = ExtResource("6_i4s8h")
change = true

[node name="Fondo" type="StaticBody2D" parent="."]

[node name="CabraTest" type="Sprite2D" parent="Fondo" groups=["invert"]]
material = SubResource("ShaderMaterial_n7tso")
position = Vector2(1439.65, -1406.22)
scale = Vector2(1.51882, 1.1182)
texture = ExtResource("2_8vgjk")

[node name="Label" type="TextEdit" parent="."]
offset_left = 591.0
offset_top = 138.0
offset_right = 947.0
offset_bottom = 233.0
metadata/_edit_use_anchors_ = true

[node name="ent" type="Node2D" parent="."]

[node name="Entidad" type="CharacterBody2D" parent="ent"]
position = Vector2(230, 187)
script = ExtResource("5_glogr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ent/Entidad"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_dl3bc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ent/Entidad"]
position = Vector2(100, -1)
shape = SubResource("RectangleShape2D_b8slc")

[node name="Placeholder" type="Sprite2D" parent="ent/Entidad" groups=["repit"]]
texture_repeat = 2
material = SubResource("ShaderMaterial_fcvis")
position = Vector2(-0.5, -3)
scale = Vector2(0.146484, 0.160156)
texture = ExtResource("7_kb5do")

[node name="Placeholder2" type="Sprite2D" parent="ent/Entidad" groups=["repit"]]
texture_repeat = 3
material = SubResource("ShaderMaterial_dn1qr")
position = Vector2(100, -1.5)
scale = Vector2(0.113281, 0.189453)
texture = ExtResource("7_kb5do")

[node name="el" type="Node2D" parent="."]

[node name="Elemento" type="StaticBody2D" parent="el"]
position = Vector2(400, 370)
script = ExtResource("6_h4pds")
metadata/_edit_group_ = true

[node name="Placeholder" type="Sprite2D" parent="el/Elemento" groups=["invert"]]
material = SubResource("ShaderMaterial_e6iya")
position = Vector2(-1.68681e-05, 0.500011)
scale = Vector2(0.199219, 0.0410156)
texture = ExtResource("7_kb5do")

[node name="CollisionShape2D" type="CollisionShape2D" parent="el/Elemento"]
shape = SubResource("RectangleShape2D_tpgmf")

[node name="palplayer" type="Marker2D" parent="."]
position = Vector2(785, 350)

[node name="cabra" parent="." instance=ExtResource("9_xqvxt")]
position = Vector2(258, -271)

[node name="cabra2" parent="." instance=ExtResource("9_xqvxt")]
position = Vector2(659, -198)

[node name="cabra3" parent="." instance=ExtResource("9_xqvxt")]
position = Vector2(540, -376)

[node name="cabra4" parent="." instance=ExtResource("9_xqvxt")]
position = Vector2(278, -89)

[node name="cabra5" parent="." instance=ExtResource("9_xqvxt")]
position = Vector2(588, -659)

[node name="Juez" parent="." instance=ExtResource("9_pkqgs")]
position = Vector2(-782, -1679)

[connection signal="interaccion" from="ent/Entidad" to="." method="_on_entidad_interaccion"]
[connection signal="interaccion" from="el/Elemento" to="." method="_on_elemento_interaccion"]
